# adaptive_symmetry_breaking

./: .gitignore  readme.md  rm_tmp_dir.sh  run_experiment.sh
ARGoS_simulation/: CMakeLists.txt  argos3  controller_backup.txt
ARGoS_simulation/behaviours/: CMakeLists.txt  agent.h  agentCDCIlocal.h  agentCDCIlocal_compare.c  agentCDCIlocal_compare_more_options.c  agentCDCIlocal_resample.c  agent_adaptive.c  agent_global.c  agent_local.c  agent_local_compare_tiles.c  agent_local_inhib_tiles.c  agent_perfect_sample.c  agent_stub.c  agent_sym_break.c
ARGoS_simulation/cmake/: ARGoSBuildChecks.cmake
ARGoS_simulation/data_generation_scripts/: ants_dens_adapt.sh  ants_dens_sym_break.sh  ants_experiments.sh  ants_experiments_sample_ticks.sh  ants_experiments_sample_ticks_ps.sh  ants_experiments_samples.sh  ants_experiments_samples_ps.sh  ants_symmetry_breaking.sh  cluster_create_argos_files.sh  cluster_create_argos_files_acclimatisation.sh  cluster_create_argos_files_adaptive.sh  cluster_create_argos_files_dynamic_env.sh  cluster_create_argos_files_param.sh  cluster_create_argos_files_sample_length.sh  cluster_create_argos_files_symbreak.sh  cluster_test.sh  create_run_local_experiments.sh  local_create_argos_files_and_run.sh  new_cluster_create_argos_files.sh  runexps_kilogird.sh  runexps_local.sh  runexps_problem.sh  runexps_problem_tiles.sh  runjob_template.sh  runjob_template_master.sh  runjob_template_run.sh  runjobs.sh  static_asb.sh  stub_test.sh  test.sh
ARGoS_simulation/data_generation_scripts/old_scripts/: cluster_create_argos_files.sh  create_run_local_experiments.sh  typical_job_script.txt
ARGoS_simulation/experiment/: 3_op_template.argos  3_op_template_kilogrid.argos  3_op_template_viz.argos  5_op_template.argos  5_op_template_viz.argos  AdaptationStudy_50_10_0.5_0.1_1.argos  kilobot_ark_5_options.argos  kilobot_ark_5_options_tiles.argos  kilobot_ark_template_withVisualization_1m_local.argos  kilogrid_stub.argos  test.argos  test_tiles.argos  tiles_3_op_template.argos  tiles_3_op_template_viz.argos  tiles_5_op_template.argos  tiles_5_op_template_viz.argos
ARGoS_simulation/loop_functions/: ASB_experiment_10.kconf  ASB_experiment_5.kconf  ASB_experiment_7.kconf  ASB_experiment_9.kconf  CMakeLists.txt  ark.cpp  ark.h  kilogrid.cpp  kilogrid.h  kilogrid_adaptive.cpp  kilogrid_global.cpp  kilogrid_local.cpp  kilogrid_stub.cpp  kilogrid_stub.h
ARGoS_simulation/loop_functions/kilogrid_conf_files/: ASB_experiment_11.kconf  ASB_experiment_12.kconf  ASB_experiment_13.kconf  ASB_experiment_14.kconf  ASB_experiment_15.kconf  ASB_experiment_16.kconf  ASB_experiment_17.kconf  ASB_experiment_18.kconf  ASB_experiment_19.kconf  ASB_experiment_2.kconf  ASB_experiment_20.kconf  ASB_experiment_21.kconf  ASB_experiment_22.kconf  ASB_experiment_23.kconf  ASB_experiment_24.kconf  ASB_experiment_25.kconf  ASB_experiment_3.kconf  ASB_experiment_4.kconf  ASB_experiment_6.kconf  ASB_experiment_8.kconf  asb_0_0.kconf  asb_0_1.kconf  asb_0_10.kconf  asb_0_11.kconf  asb_0_12.kconf  asb_0_13.kconf  asb_0_14.kconf  asb_0_15.kconf  asb_0_16.kconf  asb_0_17.kconf  asb_0_18.kconf  asb_0_19.kconf  asb_0_2.kconf  asb_0_3.kconf  asb_0_4.kconf  asb_0_5.kconf  asb_0_6.kconf  asb_0_7.kconf  asb_0_8.kconf  asb_0_9.kconf  (+902 more)
data_cluster/3options_N50_tiles_global_3/: tiles_global_3_3options_50_0.txt  tiles_global_3_3options_50_1.txt  tiles_global_3_3options_50_2.txt  tiles_global_3_3options_50_3.txt  tiles_global_3_3options_50_4.txt
data_cluster/3options_N50_tiles_local_3/: tiles_local_3_3options_50_0.txt  tiles_local_3_3options_50_1.txt  tiles_local_3_3options_50_2.txt  tiles_local_3_3options_50_3.txt  tiles_local_3_3options_50_4.txt
data_cluster/3options_N50_tiles_local_inhib/: tiles_local_inhib_3options_50_0.txt  tiles_local_inhib_3options_50_1.txt  tiles_local_inhib_3options_50_2.txt  tiles_local_inhib_3options_50_3.txt
data_cluster/5options_N50_tiles_global_5/: tiles_global_5_5options_50_0.txt  tiles_global_5_5options_50_1.txt  tiles_global_5_5options_50_2.txt  tiles_global_5_5options_50_3.txt  tiles_global_5_5options_50_4.txt
data_cluster/5options_N50_tiles_local_5/: tiles_local_5_5options_50_0.txt  tiles_local_5_5options_50_1.txt  tiles_local_5_5options_50_2.txt  tiles_local_5_5options_50_3.txt  tiles_local_5_5options_50_4.txt
experiments_cluster/3options_N50_modelcompare/: tiles_global_3_50_0.argos  tiles_global_3_50_1.argos  tiles_global_3_50_2.argos  tiles_global_3_50_3.argos  tiles_global_3_50_4.argos  tiles_local_3_50_0.argos  tiles_local_3_50_1.argos  tiles_local_3_50_2.argos  tiles_local_3_50_3.argos  tiles_local_3_50_4.argos  tiles_local_inhib_50_0.argos  tiles_local_inhib_50_1.argos  tiles_local_inhib_50_2.argos  tiles_local_inhib_50_3.argos
experiments_cluster/3options_N50_modelinhib/: tiles_local_inhib_50_0.argos  tiles_local_inhib_50_1.argos  tiles_local_inhib_50_2.argos  tiles_local_inhib_50_3.argos
experiments_cluster/5options_N50_modelcompare/: tiles_global_5_50_0.argos  tiles_global_5_50_1.argos  tiles_global_5_50_2.argos  tiles_global_5_50_3.argos  tiles_global_5_50_4.argos  tiles_local_5_50_0.argos  tiles_local_5_50_1.argos  tiles_local_5_50_2.argos  tiles_local_5_50_3.argos  tiles_local_5_50_4.argos
scripts/: create_argos_files.sh  example.sh  runjob.sh  runjob_template.sh  runjobs.sh  working.sh
