if(ARGOS_BUILD_FOR_SIMULATOR)
  include_directories(${CMAKE_SOURCE_DIR}/argos3/plugins/robots/kilobot/control_interface)

add_executable(agentCDCIlocal_compare agentCDCIlocal.h agentCDCIlocal_compare.c)
if(UNIX AND NOT APPLE)
	target_link_libraries(agentCDCIlocal_compare  argos3plugin_simulator_kilolib rt m)
else(UNIX AND NOT APPLE)
	target_link_libraries(agentCDCIlocal_compare  argos3plugin_simulator_kilolib) 
endif()

add_executable(agentCDCIlocal_resample agentCDCIlocal.h agentCDCIlocal_resample.c)
if(UNIX AND NOT APPLE)
	target_link_libraries(agentCDCIlocal_resample  argos3plugin_simulator_kilolib rt m)
else(UNIX AND NOT APPLE)
	target_link_libraries(agentCDCIlocal_resample  argos3plugin_simulator_kilolib)
endif()

add_executable(agentCDCIlocal_compare_more_options agentCDCIlocal.h agentCDCIlocal_compare_more_options.c)
if(UNIX AND NOT APPLE)
    target_link_libraries(agentCDCIlocal_compare_more_options  argos3plugin_simulator_kilolib rt m)
else(UNIX AND NOT APPLE)
    target_link_libraries(agentCDCIlocal_compare_more_options  argos3plugin_simulator_kilolib)
endif()

add_executable(agent_local_compare_tiles agentCDCIlocal.h agent_local_compare_tiles.c)
if(UNIX AND NOT APPLE)
    target_link_libraries(agent_local_compare_tiles  argos3plugin_simulator_kilolib rt m)
else(UNIX AND NOT APPLE)
    target_link_libraries(agent_local_compare_tiles  argos3plugin_simulator_kilolib)
endif()

add_executable(agent_local_inhib_tiles agentCDCIlocal.h agent_local_inhib_tiles.c)
if(UNIX AND NOT APPLE)
    target_link_libraries(agent_local_inhib_tiles  argos3plugin_simulator_kilolib rt m)
else(UNIX AND NOT APPLE)
    target_link_libraries(agent_local_inhib_tiles  argos3plugin_simulator_kilolib)
endif()

endif(ARGOS_BUILD_FOR_SIMULATOR)
